--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-  </head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+</head>
+<body>
   <body class="is-preload">
     <!-- Nav -->
     <nav id="nav">
@@ -61,37 +63,26 @@
         <div class="row aln-center">
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
-              <span class="icon featured"></span>
-              <h3>Consequat lorem</h3>
+              <span class="fab fa-java fa-5x featured" style="color: #EA8A95;"></span>
+              <h3>JAVA-OOP</h3>
               <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
+                A Collection of Quiz and Final Test that related to JAVA programming language that i have done
               </p>
+              <a href="https://github.com/StevanusO/College-Object-Oriented-Programming.git" class="button">Link</a>
             </section>
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
-              <span class="icon solid featured fa-camera-retro"></span>
-              <h3>Lorem dolor tempus</h3>
+              <span class="fa fa-database fa-5x featured" style="color: #EA8A95;"></span>
+              <h3>SQL</h3>
               <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
+                A Collection of Quiz and Project that related to related to SQL language
               </p>
-            </section>
-          </div>
-          <div class="col-4 col-6-medium col-12-small">
-            <section class="box style1">
-              <span class="icon featured fa-thumbs-up"></span>
-              <h3>Feugiat posuere</h3>
-              <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
-              </p>
+              <a href="https://github.com/StevanusO/College-Database_Systems.git" class="button">Link</a>
             </section>
           </div>
         </div>
         <footer>
-          <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
           <a href="#portfolio" class="button large scrolly"
             >See some of my recent work</a
           >
@@ -105,8 +96,7 @@
         <header>
           <h2>Here’s some stuff I made recently.</h2>
           <p>
-            Proin odio consequat sapien vestibulum consequat lorem dolore
-            feugiat.
+            Stuff here is something that i have interested to make in my free time
           </p>
         </header>
         <div class="row">
@@ -177,87 +167,19 @@
     <!-- Contact -->
     <article id="contact" class="wrapper style4">
       <div class="container medium">
-        <header>
-          <h2>Have me make stuff for you.</h2>
-          <p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
-        </header>
+        
         <div class="row">
-          <div class="col-12">
-            <form method="post" action="#">
-              <div class="row">
-                <div class="col-6 col-12-small">
-                  <input type="text" name="name" id="name" placeholder="Name" />
-                </div>
-                <div class="col-6 col-12-small">
-                  <input
-                    type="text"
-                    name="email"
-                    id="email"
-                    placeholder="Email"
-                  />
-                </div>
-                <div class="col-12">
-                  <input
-                    type="text"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                  />
-                </div>
-                <div class="col-12">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Message"
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <ul class="actions">
-                    <li><input type="submit" value="Send Message" /></li>
-                    <li>
-                      <input type="reset" value="Clear Form" class="alt" />
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </form>
-          </div>
           <div class="col-12">
             <hr />
             <h3>Find me on ...</h3>
             <ul class="social">
               <li>
-                <a href="#" class="icon brands fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-dribbble"
-                  ><span class="label">Dribbble</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-linkedin-in"
+                <a href="https://www.linkedin.com/in/stevanusong/" class="icon brands fa-linkedin-in"
                   ><span class="label">LinkedIn</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands fa-tumblr"
-                  ><span class="label">Tumblr</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-google-plus"
-                  ><span class="label">Google+</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-github"
+                <a href="https://github.com/StevanusO" class="icon brands fa-github"
                   ><span class="label">Github</span></a
                 >
               </li>
@@ -278,8 +200,8 @@
         </div>
         <footer>
           <ul id="copyright">
-            <li>&copy; Untitled. All rights reserved.</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; Stevanus Ong. All rights reserved.</li>
+            <li>Website Template from <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </footer>
       </div>
