--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
           </p>
         </header>
         <div class="row">
+           <div class="col-4 col-6-medium col-12-small">
+            <article class="box style2">
+              <a href="#" class="image featured"
+                ><img src="images/MachineLearnIcon.png" alt="ML/DL"
+              /></a>
+              <h3><a href="https://github.com/StevanusO/NLP-Emotions-GPU-Accelaration.git">NLP-Emotion-in-text</a></h3>
+              <p>Target :  ['happy', 'sadness', 'anger', 'fear', 'love', 'surprise']<br>
+                Dataset : Kaggle<br>
+                Train/Test : 80%/20%
+              </p>
+            </article>
+          </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
