--- a/index.html
+++ b/index.html
@@ -100,18 +100,19 @@
           </p>
         </header>
         <div class="row">
-           <div class="col-4 col-6-medium col-12-small">
+          <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt="ML/DL"
               /></a>
-              <h3><a href="https://github.com/StevanusO/NLP-Emotions-GPU-Accelaration.git">NLP-Emotion-in-text</a></h3>
-              <p>Target :  ['happy', 'sadness', 'anger', 'fear', 'love', 'surprise']<br>
+              <h3><a href="https://www.kaggle.com/code/stevanuso/heart-failure-prediction-dnn">Heart Failure Prediction</a></h3>
+              <p>Target : ["DEATH_EVENT"]<br>
                 Dataset : Kaggle<br>
                 Train/Test : 80%/20%
               </p>
             </article>
           </div>
+        <div class="row">
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
@@ -220,6 +221,11 @@
                 <a onclick="copyToClipboardOutlook()" onmouseout="outMouse1()" class="icon light fa-envelope">
                   <span class="tooltiptext1" id="myTooltip1">Copy to clipboard</span>
                 </a>
+              </li>
+              <li>
+                <a href="https://www.kaggle.com/stevanuso" class="icon brands fab fa-kaggle"
+                  ><span class="label">Github</span></a
+                >
               </li>
             </ul>
             <hr />
