--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <div class="row">
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
+              <!-- <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt="ML/DL"
-              /></a>
+              /></a> -->
               <h3><a href="https://www.kaggle.com/code/stevanuso/heart-failure-prediction-dnn">Heart Failure Prediction</a></h3>
               <p>Target : ["DEATH_EVENT"]<br>
                 Dataset : Kaggle<br>
@@ -112,12 +112,11 @@
               </p>
             </article>
           </div>
-        <div class="row">
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
+              <!-- <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt="ML/DL"
-              /></a>
+              /></a> -->
               <h3><a href="https://github.com/StevanusO/CNN_ImageClass_RockPaperScissors.git">Image Classification</a></h3>
               <p>Target : ["Rock", "Paper", "Scissor"]<br>
                 Dataset : Kaggle/Dicoding<br>
@@ -127,9 +126,9 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
+              <!-- <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt="ML/DL"
-              /></a>
+              /></a> -->
               <h3><a href="https://github.com/StevanusO/NLP-Dicoding-Proyek-1.git">Spam Mails Detections</a></h3>
               <p>
                 Dicoding Submission 1<br>
@@ -141,9 +140,9 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
+              <!-- <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt="ML/DL"
-              /></a>
+              /></a> -->
               <h3><a href="https://github.com/StevanusO/TimeSeries-Dicoding-Proyek-2.git">Time Series Prediction</a></h3>
               <p>Dicoding Submission 2<br>
                 Target : ["Temp"]<br>
@@ -153,9 +152,9 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
+              <!-- <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt=""
-              /></a>
+              /></a> -->
               <h3><a href="https://github.com/StevanusO/Image-Classification-Dicoding-Proyek-3.git">Rice Image Classification</a></h3>
               <p>Dicoding Submission 3<br>
                 Target : ['Arborio', 'Basmati', 'Ipsala', 'Jasmine', 'Karacadag']<br>
@@ -223,7 +222,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.kaggle.com/stevanuso" class="icon brands fab fa-kaggle"
+                <a href="https://www.kaggle.com/stevanuso" class="icon brands fa-kaggle"
                   ><span class="label">Github</span></a
                 >
               </li>
