--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container">
         <div class="row">
           <div class="col-4 col-5-large col-12-medium">
-            <span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+            <span class="image fit"><img src="images/f70eb197-9dd4-49c6-83a5-e894c489cf49.jpg" alt="" /></span>
           </div>
           <div class="col-8 col-7-large col-12-medium">
             <header>
@@ -79,6 +79,16 @@
                 A Collection of Quiz and Project that related to related to SQL language
               </p>
               <a href="https://github.com/StevanusO/College-Database_Systems.git" class="button">Link</a>
+            </section>
+          </div>
+          <div class="col-4 col-6-medium col-12-small">
+            <section class="box style1">
+              <span class="fab fa-php fa-5x featured" style="color: #EA8A95;"></span>
+              <h3>PHP</h3>
+              <p>
+                A Collection of assignment and project that related to backend programming language that i have done
+              </p>
+              <a href="https://github.com/StevanusO/College-Object-Oriented-Programming.git" class="button">Link</a>
             </section>
           </div>
         </div>
@@ -163,24 +173,6 @@
             </article>
           </div>
           <!-- Another Project Coming Soon -->
-          <!-- <div class="col-4 col-6-medium col-12-small">
-            <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/pic05.jpg" alt=""
-              /></a>
-              <h3><a href="#">Feugiat aliquam</a></h3>
-              <p>Ornare nulla proin odio consequat.</p>
-            </article>
-          </div>
-          <div class="col-4 col-6-medium col-12-small">
-            <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/pic06.jpg" alt=""
-              /></a>
-              <h3><a href="#">Sed amet ornare</a></h3>
-              <p>Ornare nulla proin odio consequat.</p>
-            </article>
-          </div> -->
         </div>
         <footer>
           <a href="#contact" class="button large scrolly"
