--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <!-- <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt="ML/DL"
               /></a> -->
-              <h3><a href="https://www.kaggle.com/code/stevanuso/heart-failure-prediction-dnn">Heart Failure Prediction</a></h3>
+              <h3><a href="https://www.kaggle.com/code/stevanuso/heart-failure-prediction-ann?scriptVersionId=107387949">Heart Failure Prediction</a></h3>
               <p>Target : ["DEATH_EVENT"]<br>
                 Dataset : Kaggle<br>
                 Train/Test : 80%/20%
