--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-  </head>
+</head>
 <body>
   <body class="is-preload">
     <!-- Nav -->
@@ -74,7 +74,7 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
-              <span class="fa fa-database fa-7x featured" style="color: #EA8A95;"></span>
+              <span class="fa fa-database fa-5x featured" style="color: #EA8A95;"></span>
               <h3>SQL</h3>
               <p>
                 A Collection of Quiz and Project that related to related to SQL language
@@ -89,7 +89,7 @@
               <p>
                 A Collection of assignment and project that related to backend programming language that i have done
               </p>
-              <a href="https://github.com/StevanusO/College-Web-Programming.git" class="button">Link</a>
+              <a href="https://github.com/StevanusO/College-Object-Oriented-Programming.git" class="button">Link</a>
             </section>
           </div>
         </div>
@@ -111,12 +111,12 @@
           </p>
         </header>
         <div class="row">
-          <div class="col-4 col-6-medium col-12-small">
+          <div class="col-4 col-6-medium col-12-small ">
             <article class="box style2">
               <!-- <a href="#" class="image featured"
                 ><img src="images/MachineLearnIcon.png" alt="ML/DL"
               /></a> -->
-              <h3><a href="https://www.kaggle.com/code/stevanuso/heart-failure-prediction-ann?scriptVersionId=107387949">Heart Failure Prediction</a></h3>
+              <h3><a href="https://www.kaggle.com/code/stevanuso/heart-failure-prediction-dnn">Heart Failure Prediction</a></h3>
               <p>Target : ["DEATH_EVENT"]<br>
                 Dataset : Kaggle<br>
                 Train/Test : 80%/20%
@@ -182,47 +182,70 @@
         </footer>
       </div>
     </article>
-
+    
     <!-- Contact -->
     <article id="contact" class="wrapper style4">
       <div class="container medium">
-        
-        <div class="row">
-          <div class="col-12">
-            <hr />
-            <h3>Find me on ...</h3>
-            <ul class="social">
-              <li>
-                <a href="https://www.linkedin.com/in/stevanusong/" class="icon brands fa-linkedin-in"
-                  ><span class="label">LinkedIn</span></a
-                >
-              </li>
-              <li>
-                <a href="https://github.com/StevanusO" class="icon brands fa-github"
-                  ><span class="label">Github</span></a
-                >
-              </li>
-              <input type="text" value="stevanusong8@gmail.com" id="gmail" hidden>
-              <li class="tooltip">
-                <a onclick="copyToClipboardGmail()" onmouseout="outMouse()" class="icon brands fa-google">
-                  <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
-                </a>
-              </li>
-              <input type="text" value="stevanus.ong@binus.ac.id" id="outlook" hidden>
-              <li class="tooltip1">
-                <a onclick="copyToClipboardOutlook()" onmouseout="outMouse1()" class="icon light fa-envelope">
-                  <span class="tooltiptext1" id="myTooltip1">Copy to clipboard</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://www.kaggle.com/stevanuso" class="icon brands fa-kaggle"
-                  ><span class="label">Github</span></a
-                >
-              </li>
-            </ul>
+        <div class="col-12">
+          <hr />
+          <h3>Contact Info...</h3>
+          <div class="container text-center">  
+            <div class="row d-flex">
+              <div class="col-md-3">
+                <div class="dbox w-100 text-center">
+                  <div class="d-flex align-items-center justify-content-center">
+                    <span class="icon brands fa-linkedin-in"></span>
+                  </div>
+                  <div class="text">
+                    <a href="https://www.linkedin.com/in/stevanusong/">stevanuso</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="dbox w-100 text-center">
+                  <div class="d-flex align-items-center justify-content-center">
+                    <span class="icon brands fa-github"></span>
+                  </div>
+                  <div class="text">
+                    <a href="https://github.com/StevanusO">stevanuso</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="dbox w-100 text-center">
+                  <div class="d-flex align-items-center justify-content-center">
+                    <span class="material-icons" style="font-size: 1.24em;">mail</span>
+                  </div>
+                  <div class="text">
+                    <a href="maito:email@helloworld@#!$%^&" onmouseover="this.href=this.href.replace('email@helloworld@#!$%^&','stevanusong8@gmail.com')">stevanusong8</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="dbox w-100 text-center">
+                  <div class="d-flex align-items-center justify-content-center">
+                    <span class="material-icons" style="font-size: 1.24em;">mail</span>
+                  </div>
+                  <div class="text">
+                    <a href="maito:email@helloworld@#!$!^&" onmouseover="this.href=this.href.replace('email@helloworld@#!$!^&','wangstevanus8@gmail.com')">wangstevanus8</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="dbox w-100 text-center">
+                  <div class="d-flex align-items-center justify-content-center">
+                    <span class="icon">&#9742;</span>
+                  </div>
+                  <div class="text">
+                    <a href="tel:tel@saltmeup@#!@%!^!@$!@" onmouseover="this.href=this.href.replace('tel@saltmeup@#!@%!^!@$!@','+6289514751916')">+6289514751916</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
             <hr />
           </div>
-        </div>
         <footer>
           <ul id="copyright">
             <li>&copy; Stevanus Ong. All rights reserved.</li>
@@ -233,12 +256,12 @@
     </article>
 
     <!-- Scripts -->
+    <script src="assets/js/clipboard.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/clipboard.js"></script>
   </body>
 </html>
